objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Formation Continue</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1er contact</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Abandon</fullName>
        </values>
        <values>
            <fullName>Qualifié</fullName>
        </values>
        <values>
            <fullName>Social suspect</fullName>
        </values>
        <values>
            <fullName>Suspect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Formation initiale</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1er contact</fullName>
        </values>
        <values>
            <fullName>Abandon</fullName>
        </values>
        <values>
            <fullName>Qualifié</fullName>
        </values>
        <values>
            <fullName>Social suspect</fullName>
        </values>
        <values>
            <fullName>Suspect</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Principal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1er contact</fullName>
        </values>
        <values>
            <fullName>Abandon</fullName>
        </values>
        <values>
            <fullName>Qualifié</fullName>
        </values>
        <values>
            <fullName>Social suspect</fullName>
        </values>
        <values>
            <fullName>Suspect</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sur Mesure</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Abandon</fullName>
        </values>
        <values>
            <fullName>Qualifié</fullName>
        </values>
        <values>
            <fullName>Suspect</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Adresse_D_partement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adresse: Département</label>
        <referenceTo>D_partement__c</referenceTo>
        <relationshipLabel>Pistes</relationshipLabel>
        <relationshipName>Pistes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adresse_Ligne_2__c</fullName>
        <label>Adresse: Ligne 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_Ligne_3__c</fullName>
        <label>Adresse: Ligne 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_Pays__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adresse: Pays</label>
        <referenceTo>Pays__c</referenceTo>
        <relationshipLabel>Pistes</relationshipLabel>
        <relationshipName>Pistes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adresse_Rue__c</fullName>
        <label>Adresse: Rue</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_Ville__c</fullName>
        <label>Adresse: Ville</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_code_postal__c</fullName>
        <label>Adresse: Code postal</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_e_mail__c</fullName>
        <externalId>true</externalId>
        <label>Adresse Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Adresse_etat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adresse: Etat</label>
        <referenceTo>Etat__c</referenceTo>
        <relationshipLabel>Pistes</relationshipLabel>
        <relationshipName>Pistes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ann_e_du_dipl_me__c</fullName>
        <label>Année du diplôme</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anne_diplome__c</fullName>
        <label>Année du diplôme</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centre_d_int_r_t__c</fullName>
        <inlineHelpText>centre d’intérêt émis par le prospect</inlineHelpText>
        <label>Centre d&apos;intérêt</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentaire_piste__c</fullName>
        <inlineHelpText>Commentaire saisi par le prospect</inlineHelpText>
        <label>Commentaire de la piste</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Contact__c</fullName>
        <description>Ce champ permet d&apos;indiquer quel type d&apos;enregistrement sera appliqué pour le contact lors de la conversion</description>
        <label>Conversion Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Etudiant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professionnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Etudiant</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_de_p_remption__c</fullName>
        <label>Date de péremption</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dipl_me__c</fullName>
        <label>Diplôme</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domaine_d_tudes__c</fullName>
        <label>Domaine d&apos;études</label>
        <picklist>
            <picklistValues>
                <fullName>Autres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP littéraires</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Droit, Economie, Sciences de Gestion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecole de commerce française</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gestion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingénieur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sciences humaines</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effectif_entreprise__c</fullName>
        <label>Effectif de l&apos;entreprise</label>
        <picklist>
            <picklistValues>
                <fullName>De 0 à 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De 10 à 49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De 50 à 249</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De 250 à 499</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De 500 à 999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De 1000 à 1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De 2000 à 4999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De 5000 à 9999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 000 et plus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entreprise_declare__c</fullName>
        <label>Entreprise déclarée</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exercice_par_d_faut__c</fullName>
        <formula>TEXT(YEAR(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exercice par défaut</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Famille_Fonction__c</fullName>
        <label>Famille Fonction</label>
        <picklist>
            <picklistValues>
                <fullName>Autres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial/Ventes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direction Générale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enseignement/Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Etud/Recherche/Dévelop/Qualité</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance/Gest./Adminis./Juridi.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organisation/Systèmes d&apos;Informations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production/Achats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ressources Humaines/Formation</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Famille__c</fullName>
        <label>Famille</label>
        <picklist>
            <controllingField>Gamme__c</controllingField>
            <picklistValues>
                <fullName>Accompagnement entreprises = RDV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accompagnement pédagogique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accord Cadre Formation Continue =</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annuaires</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atelier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Careers Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Célébration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chaires Conjointes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chaires d’enseignement et de recherche (&gt;1Me sur 4/5 ans)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colloques</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conférence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conférences non payantes (notoriété)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conférences non payantes (pédagogiques)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conférences non payantes (type gd public)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conférences non payantes (type scientifique)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conférences payantes (par l&apos;auditeur, participant)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conférences payantes (par l&apos;intervenant-casHEC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conseil institutionnel =</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Discovery Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Développement Commercial &amp; Relation Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Développement personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direction d’activité</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dons Fondation =&gt; individu ou entreprise (idem EMLYON)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquêtes et Stats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entretien individuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evènements corporate payants organisés par la comm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evenements EMLYON.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evenements EMLYON. (A voir avec BB)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fonctions__c</fullName>
        <label>Fonction codée</label>
        <picklist>
            <controllingField>Famille_Fonction__c</controllingField>
            <picklistValues>
                <fullName>Actuaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjoint Dir.Rel.Hum./Sociales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjoint Direct. Admini et Financier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjoint Direct. de la Communi.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjoint Direct. de Programmes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjoint Direct du Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjoint Directeur Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjoint Directeur d&apos;Etablissement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjoint Directeur Juridique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjoint Directeur Régional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjoint Directeur Ressour.Hum.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjoint Resp Gestion Cad./Car.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrateur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent(Général) d&apos;Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent de Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyste Financier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animateur Qualité</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant(e) Chef de Prod/Marq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant(e) de la Formation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant(e) Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant(e) Publicité</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Chef de Marchés</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attaché(e) Commercial(e)/VRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attaché(e) de Direction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditeur Externe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditeur Interne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadre Achats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadre Administ. des Ventes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gamme__c</fullName>
        <label>Gamme</label>
        <picklist>
            <picklistValues>
                <fullName>ACCOMP. CARRIERE ou CARRIERE RESEAUX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTRES OFFRES ?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTRES PROGRAMMES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTRES SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVENEMENTS DE RECRUTEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVENEMENTS EXPERTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVENEMENTS IMAGE / RESEAU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVENEMENTS PROMOTIONNELS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFORMER (par différents canaux)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECENAT (CENTRALE LYON - EMLYON)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECENAT EMLYON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECENAT FONDATION EMLYON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MESURER LA QUALITE ET LA PERFORMANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFFRES EXECUTIVE DEVELOPMENT hors MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programme certifiant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programme court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROGRAMMES ENTREPRENEURS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROGRAMMES MASTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROGRAMMES MASTERES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROGRAMMES MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPONSORING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAXE D&apos;APPRENTISSAGE</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inscription_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demande inscription newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linkedin__c</fullName>
        <label>Linkedin</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <externalId>true</externalId>
        <label>Login</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Motif_d_abandon__c</fullName>
        <description>Test EMLYON</description>
        <label>Motif d&apos;abandon</label>
        <picklist>
            <picklistValues>
                <fullName>Date légale dépassée</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doublon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existe déjà</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impossible à contacter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non intéressé(e)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolète</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test EMLYON</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nature_du_1er_contact__c</fullName>
        <inlineHelpText>Comment la piste a connu EMLYON</inlineHelpText>
        <label>Contexte premier contact</label>
        <picklist>
            <picklistValues>
                <fullName>Agent commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Articles de Presse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouche à oreille</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diplômés</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directories/ Guides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display/ Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evènements/ Conférences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forum/salon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing (papier)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescripteurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publicité papier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Réputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Réseaux sociaux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Téléphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web to lead</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Niveau_d_exp_rience_professionnelle__c</fullName>
        <label>Niveau d&apos;expérience professionnelle</label>
        <picklist>
            <picklistValues>
                <fullName>0-2 ans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5 ans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10 ans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+ de 10 ans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-15 ans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-20 ans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-25 ans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+ de 25 ans</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Niveau_d_tudes__c</fullName>
        <label>Niveau d&apos;études</label>
        <picklist>
            <picklistValues>
                <fullName>Bac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bac + 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bac + 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bac + 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bac + 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bac + 5 et +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nombre_de_collaborateurs__c</fullName>
        <label>Nombre de collaborateurs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pays_de_residence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pays de résidence</label>
        <referenceTo>Pays__c</referenceTo>
        <relationshipLabel>Pistes (Pays de résidence)</relationshipLabel>
        <relationshipName>Pistes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point_cl__c</fullName>
        <inlineHelpText>éléments clés à connaitre sur le prospect</inlineHelpText>
        <label>Point clé</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posture__c</fullName>
        <label>Posture</label>
        <picklist>
            <picklistValues>
                <fullName>Dirigeant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert métier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primo manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior manager</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prescripteur__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescripteur</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provenance__c</fullName>
        <inlineHelpText>décrit le canal technique d’arrivée de la fiche piste dans le système</inlineHelpText>
        <label>Canal d&apos;acquisition</label>
        <picklist>
            <picklistValues>
                <fullName>Adwords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus Day virtuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directories/ Guides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display/ Banners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fichiers externes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forum/ Salon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Module Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescripteurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Présentation aux écoles/ universités</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Présentation étudiants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Réputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Réseaux sociaux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Réunion d&apos;information France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Réunion d&apos;information Internationale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salon virtuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Score test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Téléphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Day (BBA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web to lead</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recherche_de_formation_pour__c</fullName>
        <label>Recherche de formation pour</label>
        <picklist>
            <picklistValues>
                <fullName>Des collaborateurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soi</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Responsable_plan_formation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Responsable plan de formation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sous_provenance__c</fullName>
        <inlineHelpText>précise un sous canal de la fiche piste dans le système</inlineHelpText>
        <label>Détail canal d&apos;acquisition</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <inlineHelpText>Thématique de campagne destinée à segmenter les pistes</inlineHelpText>
        <label>Thème</label>
        <picklist>
            <picklistValues>
                <fullName>Achats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduite du changement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Développement personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrepreneuriat/ Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management et ressources humaines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Général</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmes de leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmes pour dirigeants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stratégie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport / Logistique</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>